--- a/index.html
+++ b/index.html
@@ -6,9 +6,81 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./site.css">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons+Outlined" rel="stylesheet">
   <!-- Add code to use the new-window icon here  -->
   <title>Home Page</title>
 </head>
 
-<!-- Your code here -->
+<body>
+  <header>
+    <div>
+      <a>home</a>
+      <a>Sign in</a>
+      <button>Get started</button>
+    </div>
+    <nav>
+      <a>text</a>
+      <a>text</a>
+      <a>text</a>
+      <a>text</a>
+      <a>text</a>
+      <a>text</a>
+    </nav>
+  </header>
+  
+  <main>
+    <section>
+      <h1>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do</h1>
+      <img alt="img placeholder">
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      </p>
+    </section>
+
+    <article>
+      <h2>heading</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      </p>
+    </article>
+
+    <article>
+      <h2>heading</h2>
+      <p>
+        Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur.
+      </p>
+    </article>
+
+    <aside>
+      more articles
+      <ul>
+        <li>
+          <a>Lorem ipsum dolor
+            <span class="material-icons-outlined">
+            open_in_new
+            </span>
+          </a>
+        </li>
+
+        <li>
+          <a>consectetur adipiscing elit
+            <span class="material-icons-outlined">
+            open_in_new
+            </span>
+          </a>
+        </li>
+      </ul>
+    </aside>
+  </main>
+
+  <footer>
+    <div>
+      home icon
+
+    <a>About</a>
+    <a>Help</a>
+    </div>
+  </footer>
+  
+</body>
 </html>
